--- a/src/assets/scss/components/_list.scss
+++ b/src/assets/scss/components/_list.scss
@@ -73,6 +73,23 @@
 			}
 		}
 
+		&.footer-icons {
+			margin: 10px 0;
+			li {
+				display: inline-block;
+				padding: 0 0.75em 0 0;
+				width: 3rem;
+
+				&:last-child {
+					padding-right: 0;
+				}
+
+				img {
+					width: 100%;
+				}
+			}
+		}
+
 		&.actions {
 			cursor: default;
 			list-style: none;
